hphp/hack/test/typecheck/readonly/await_expression_bug.php.exp
File "await_expression_bug.php", line 16, characters 15-16:
This expression is readonly, so it can only call readonly methods (Typing[4413])
  File "await_expression_bug.php", line 5, characters 25-27:
  This method is not readonly
